test/expected/simple-timer.txt
/scripts/simple-timer.js:8
  throw new Error('trace');
  ^

Error: trace
    at Timeout.callback [as _onTimeout] (/scripts/simple-timer.js:8:9)
    at Object.<anonymous> (/scripts/simple-timer.js:7:1)
